--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
   "author": "Elvis Christian",
   "license": "ISC",
@@ -12,6 +12,7 @@
     "connect-flash": "^0.1.1",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "flash": "^1.1.0",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.2",
     "nodemon": "^3.1.7",
