--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "flash": "^1.1.0",
+    "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.7.2",
     "nodemon": "^3.1.7",
