--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "description": "",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "ejs-mate": "^4.0.0",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "flash": "^1.1.0",
@@ -18,6 +22,7 @@
     "mongoose": "^8.7.2",
     "nodemon": "^3.1.7",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0"
   }
 }
